[package]
name = "ls-tiny"
version = "0.1.4"
authors = ["hibi221b"]
edition = "2018"
license = "MIT"
description = "ls-tiny is a less functional ls command"
readme = "README.md"
repository = "https://github.com/hibi221b/ls-tiny"
category = ["command-line-utilities"]
keywords = ["example", "ls"]

[dependencies]
clap = "2.33.0"
colored = "1.9.3"